Fixed truncated filenames in Files

--- a/styles/desktop/attachments.less
+++ b/styles/desktop/attachments.less
@@ -196,7 +196,7 @@
 
 			display: inline-block;
 			font-weight: bold;
-			height: 2.2em;
+			height: 2.6em;
 			overflow: hidden;
 			white-space: normal;
 			width: 100%;
@@ -211,8 +211,8 @@
 				display: inline-block;
 				overflow: hidden;
 				width: 100%;
-				max-height: 2.2em;
-				line-height: 1.1;
+				max-height: 2.6em;
+				line-height: 1.2;
 			}
 		}
 
